# 3d-viewer

./: CMakeLists.txt  README.md
src/: main.c  render.cpp  render.h  stdlib-helper.h
src/object/: object.cpp  object.h  vertex.c  vertex.cpp  vertex.h
tests/: run.cpp  test-case.c  test-case.h  test.c
tests/object/: object-test.cpp  object-test.h  vertex-test.c  vertex-test.cpp  vertex-test.h
